--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
         />
+        <script
+            src="https://kit.fontawesome.com/195c538e0d.js"
+            crossorigin="anonymous"
+        ></script>
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
